Use switch expressions