@@ -83,7 +83,7 @@
         <download-plugin.version>1.2.0</download-plugin.version>
         <jacoco-plugin.version>0.8.7</jacoco-plugin.version>
         <git-commmit-plugin.version>2.2.4</git-commmit-plugin.version>
-        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>${maven-surefire-plugin.version}</maven-failsafe-plugin.version>
         <docker-maven-plugin.version>0.36.0</docker-maven-plugin.version>
@@ -571,6 +571,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
+                        <argLine>--enable-preview</argLine>
                         <systemPropertyVariables>
                             <launchContainers>false</launchContainers>
                         </systemPropertyVariables>
@@ -849,17 +850,6 @@
     </reporting>
 
     <profiles>
-        <profile>
-            <id>Java 17</id>
-            <activation>
-                <jdk>[17,)</jdk>
-            </activation>
-            <properties>
-                <java.version>17</java.version>
-                <maven.compiler.source>${java.version}</maven.compiler.source>
-                <maven.compiler.target>${java.version}</maven.compiler.target>
-            </properties>
-        </profile>
         <profile>
             <!-- Run only one application container instance on fixed ports for debugging purposes -->
             <id>Container debugging</id>
